--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -9,4 +9,8 @@
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
+  //Sizes
+
+  --navbar-heigth:50px;
+
 }
