--- a/src/app/styles/themes/normal.scss
+++ b/src/app/styles/themes/normal.scss
@@ -2,7 +2,7 @@
   --bg-color: #c3c3e8;
   --inverted-bg-color: #0a0a50;
 
-  --primary-color: #033683;
+  --primary-color: #0659d2;
   --secondary-color: #096eb6;
   --inverted-primary-color: #02be02;
   --inverted-secondary-color: #7fff7f;
