--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -11,6 +11,8 @@
 
   //Sizes
 
-  --navbar-heigth:50px;
+  --navbar-height:50px;
+  --sidebar-width: 120px;
+  --sidebar-width-collapsed: 300px;
 
 }
