--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -1,10 +1,11 @@
 .Button{
   cursor: pointer;
+  color: var(--inverted-secondary-color);
+  font-weight: bold;
 }
 
 .clear {
   padding: 0;
-  margin: 0;
   border:none;
   background: none;
   outline: none;
